# charityShop

./: manage.py  pyproject.toml
app/: admin.py  models.py  urls.py  views.py
app/templates/app/: index.html  item_detail.html  show_category.html
app/templatetags/: show_category.py
charityShop/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/inc/: _nav.html
users/: views.py
